# ulstu_monorepo_an

./: .gitignore  README  README.md  Шаблон титульного листа отчёта.docx  Шаблон титульного листа отчёта.odt
cb_labs/: README.md
cb_labs/lab2/: lab2-4.pas
cb_labs/lab3/: fp.cfg  lab3  lab3-0  lab3-0.bak  lab3-3.bak  lab3-3.pas  lab3.bak
cb_labs/lab4/: fp.cfg  lab4  lab4-5.bak  lab4.pas
cb_labs/lab5/: fp.ini  lab5  lab5.bak  lab5.pas
cb_labs/lab6/: fp.ini  gdb_debug.txt  lab6-1  lab6-1.bak  lab6-1.pas
db_coursework/: README
db_coursework/coursework_db_mvc_cf/: Web.config  coursework_db_mvc_cf.csproj
distributed_is/: README
is_design_methods/: README
is_design_methods/Материалы/: Курсовой проект для ИСЭ.doc
pt_coursework/: TP-coursework.sln
pt_coursework/TP-coursework/: CommonResource.cs  FormQuiz.Designer.cs  FormQuiz.cs  IColorable.cs  MaskedField.cs  MyEventArgs.cs  PanelRadioButton.cs  ResForm.Designer.cs  TP-coursework.csproj
Базы данных/Курсовая/: coursework_db_mvc_cf.sln
Безопасность жизнедеятельности/Материалы/: Лекции.doc  Лекции.odt  Практические по БЖД.docx
Безопасность жизнедеятельности/Практическое задание/: реферат_пожары_и_взрывы.odt
Корпоративные ИС/Курсовая работа/: computerNetwork.drawio  КР.docx  ЦИСТбв-51 - КорпИС - Нгуен Х.А. - ПЗ к КР.docx
Корпоративные ИС/Лабы/: logisticsSystems.rsf
Методы и средства проектирования ИС/Конспект/: ClassDiagramNotes.odt  Notes.odt
Методы и средства проектирования ИС/Курсовая работа/: .~lock.Курсовая.odt#  Курсовая.odt
Методы и средства проектирования ИС/Лабы/: .gitignore
Моделирование ИС/Курсовая/: курсовая.docx
Моделирование ИС/Лабы/lab1_old/: .gitignore  CMakeLists.txt  Main.qml  main.cpp
Моделирование ИС/Лабы/lab1_old/domains/decl/: stat_perf.hpp
Моделирование ИС/Лабы/lab1_old/domains/def/: stat_perf.cpp
Моделирование ИС/Лабы/lab1_old/models/decl/: freq_model.hpp  perf_tbl_model.hpp
Моделирование ИС/Лабы/lab1_old/models/def/: freq_model.cpp  perf_tbl_model.cpp
Моделирование ИС/Лабы/Работа 1/: .gitignore  CMakeLists.txt  Main.qml  main.cpp  perf_tbl_model.cpp  perf_tbl_model.hpp  stat_perf.cpp  stat_perf.hpp
Моделирование ИС/Материалы/: explanation_1.docx  explanation_2_1.docx  explanation_3_1.docx  explanation_5.docx  lab-report-example.docx  lab-report-example.odt  lab1&2.docx  lab1&2.odt  lab3.docx  lab3.odt  lab5.docx  lab5.odt  образец_курсовой.docx
Технологии программирования/: README.md
(+398 files in other folders)
